Fixed more layout issues

--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -25,12 +25,10 @@ h1, h2, h3, h4, h5, body {
   position: fixed;
   bottom: 0;
   width: 100%;
+  margin-bottom: 0;
 } 
 
 .text-footer {
   margin-bottom: 0;
 }
 
-.nav > li > a {
-  padding: 0;
-}
